<resources>
    <string name="app_name">Pet Tracker</string>
    <string name="server_client_id">435874035873-sj5v4mt9ne0i50l42pged8tt87c1oeib.apps.googleusercontent.com</string>
    <string name="facebook_app_id">331484427742800</string>
    <string name="fb_login_protocol_scheme">fb331484427742800</string>

    <string name="okay">Okay</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Fragment names -->
    <string name="calendar">Calendar</string>
    <string name="shopping_list">Shopping List</string>
    <string name="wish_list">Wish List</string>
    <string name="schedule">Schedule</string>

    <!-- Months -->
    <string-array name="months">
        <item name="january">January</item>
        <item name="february">February</item>
        <item name="march">March</item>
        <item name="april">April</item>
        <item name="may">May</item>
        <item name="june">June</item>
        <item name="july">July</item>
        <item name="august">August</item>
        <item name="september">September</item>
        <item name="october">October</item>
        <item name="november">November</item>
        <item name="december">December</item>
    </string-array>

    <string-array name="formatted_day_of_month">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Schedule dialog labels -->
    <string name="event_name">Event name</string>
    <string name="start_time">Start localTime:</string>
    <string name="end_time">End localTime:</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="note_prompt">Note (optional)</string>

    <!-- Time spinner choices -->
    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string-array name="multi_select_list_preference_default_value" />


    <!-- Nav drawer titles -->
    <string name="tracker">Tracker</string>
    <string name="manage_pet">Manage Pet</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="general">General</string>
    <string name="other">Other</string>

    <!-- Settings fragment -->
    <string name="dark_theme_setting">Use Dark Theme</string>

    <!-- New pet layout -->
    <string name="optional">(Optional)</string>
    <string name="breed">Breed</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="name">Name</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="create">Create</string>

    <!-- Add Existing Pet -->
    <string name="enter_pet_id">Enter Pet ID:</string>
    <string name="add">Add</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">Event removed</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="potty">Potty</string>
    <string name="walk">Walk</string>
    <string name="meal">Meal</string>
</resources>
